[package]
name = "use-biological-cell"
description = "Primitive cell vocabulary for RustUse"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-biological-cell"
keywords = ["cell", "organelle", "biology", "vocabulary", "rustuse"]
categories = ["data-structures", "science"]

[lib]
name = "use_cell"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
