[package]
name = "use-biology"
description = "Facade crate for primitive RustUse biology vocabulary"
publish = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-biology"
keywords = ["biology", "vocabulary", "organism", "taxonomy", "rustuse"]
categories = ["data-structures", "science"]

[dependencies]
use-biological-system.workspace = true
use-cell.workspace = true
use-gene.workspace = true
use-life-stage.workspace = true
use-organ.workspace = true
use-organism.workspace = true
use-reproduction.workspace = true
use-species.workspace = true
use-taxonomy.workspace = true
use-tissue.workspace = true
use-trait.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
